image not showing up fix

--- a/src/App.css
+++ b/src/App.css
@@ -306,7 +306,7 @@ body {
   margin: auto;
   margin-bottom: 50px;
   top: 15px;
-  width: 40%;
+  width: 80%;
   opacity: 0.6;
 }
 #lang {
